--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme"light">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-3</title>
+    <!-- Tailwind CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- daisy UL CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -25,21 +27,27 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
-                        'house-primary': '#ABEF5F',
+                        'green-primary': '#ABEF5F',
+                        'black-primary': '#1C1C1C',
+                        'white-primary': '#FFFFFF',
+                        'lime-primary': '#43ff64d9',
+
                     }
                 }
             }
         }
     </script>
 
+    <!-- Font awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 
 
 </head>
 
-<body class="font-Manrope">
+<body class="font-Manrope  ">
     <!-- Header -->
-    <header class="md:container md:mx-auto">
+    <header class="md:container md:mx-auto  ">
         <nav>
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
@@ -53,37 +61,44 @@
                         </div>
                         <ul tabindex="0"
                             class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                            <li><a>Home</a></li>
-                            <li><a>Services</a></li>
-                            <li><a>Portfolio</a></li>
-                            <li><a>Blogs</a></li>
-                            <li><a>Contact us</a></li>
-
+                            <li class="text-black font-bold"><a>Home</a></li>
+                            <li class="text-neutral-500"><a>Services</a></li>
+                            <li class="text-neutral-500"><a>Portfolio</a></li>
+                            <li class="text-neutral-500"><a>Blogs</a></li>
+                            <li class="text-neutral-500"><a>Contact us</a></li>
                         </ul>
 
+
                     </div>
-                    <a class="btn btn-ghost text-xl text-bold">Rinterio</a>
+
+                    <a class="btn btn-ghost font-black 
+                    text-3xl">
+                        <i class="fa-solid fa-arrow-right -rotate-45 rounded-full text-black
+                        rounded-full bg-green-primary p-2 "></i>
+                        Rinterio</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
-                        <li><a>Home</a></li>
-                        <li><a>Services</a></li>
-                        <li><a>Portfolio</a></li>
-                        <li><a>Blogs</a></li>
-                        <li><a>Contact us</a></li>
+                        <li class="text-black font-bold"><a>Home</a></li>
+                        <li class="text-neutral-500"><a>Services</a></li>
+                        <li class="text-neutral-500"><a>Portfolio</a></li>
+                        <li class="text-neutral-500"><a>Blogs</a></li>
+                        <li class="text-neutral-500"><a>Contact us</a></li>
                     </ul>
-                </div>
 
-                <div class="navbar-end  ">
-                    <button class="btn btn-ghost btn-circle">
+                </div>
+                <!--Search icon -->
+                <div class="navbar-end">
+                    <button class="btn btn-ghost btn-circle bg-white-primary rounded-full">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                         </svg>
                     </button>
-
-                    <div class="dropdown dropdown-end">
+                    <!-- Shopping bag icon -->
+                    <div class="dropdown dropdown-end rounded-full
+                    bg-white-primary ">
                         <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
                             <div class="indicator">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -94,52 +109,43 @@
 
                             </div>
                         </div>
-
-
-
-
-
-
-
-                        <button class="btn btn-ghost btn-circle">
                     </div>
-
-
-
-
-
-
-
-
-
-
-
-
                     <div class="navbar-end">
-                        <a class="btn text-black bg-house-primary">Book Consult
-                        </a>
-
+                        <a class="btn text-black
+                        bg-green-primary rounded-full">Book Consult
+                            <i class="fa-solid fa-arrow-right -rotate-45 rounded-full text-white
+                            rounded-full bg-black-primary p-2 "></i> </a>
                     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         </nav>
 
+        <!-- Banner section  -->
 
+        <div class="">
+
+            <img class=" max-auto " src="images/banner.png" alt="">
+            <h1 class="text-6xl font-bold">A barn house of this design has a striking appearance </h1>
+            <p class="">The barn house captivates with its blend of rustic charm and modern
+                sophistication, featuring weathered
+                wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+
+            <a class="btn text-black
+                 rounded-full
+                 bg-green-primary
+                bg-gradient-to-r from-green-400 via-white-500
+                ">Veiw Details <i
+                    class="fa-solid fa-arrow-right -rotate-45 text-black rounded-full bg-green-primary p-2 "></i> </a>
+        </div>
+
+
+
+
+
+
+
+
+
+        </div>
 
 
 
@@ -167,7 +173,7 @@
 
 
     <!-- Main -->
-    <main>
+    <main class="md:container md:mx-auto"></main>
 
     </main>
 
