nav styles added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
-                        clifford: '#da373d',
+                        'house-primary': '#ABEF5F',
                     }
                 }
             }
@@ -39,7 +39,7 @@
 
 <body class="font-Manrope">
     <!-- Header -->
-    <header>
+    <header class="md:container md:mx-auto">
         <nav>
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
@@ -62,7 +62,7 @@
                         </ul>
 
                     </div>
-                    <a class="btn btn-ghost text-xl">Rinterio</a>
+                    <a class="btn btn-ghost text-xl text-bold">Rinterio</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
@@ -116,7 +116,7 @@
 
 
                     <div class="navbar-end">
-                        <a class="btn  text-black bold">Book Consult
+                        <a class="btn text-black bg-house-primary">Book Consult
                         </a>
 
                     </div>
