--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                         'black-primary': '#1C1C1C',
                         'white-primary': '#FFFFFF',
                         'lime-primary': '#43ff64d9',
-
+                        'pink-primary': '#E7C1D3',
+                        'yellow-primary': '#EFDA6E',
+                        'paste-primary': '#A4DAC3',
+                        'blue-primary': '#77AAEA',
                     }
                 }
             }
@@ -40,6 +43,7 @@
 
     <!-- Font awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
 
 
 
@@ -121,11 +125,13 @@
 
         <!-- Banner section  -->
 
-        <div class="">
+        <div class=" flex flex-col items-center justfy-center">
 
-            <img class=" max-auto " src="images/banner.png" alt="">
-            <h1 class="text-6xl font-bold">A barn house of this design has a striking appearance </h1>
-            <p class="">The barn house captivates with its blend of rustic charm and modern
+
+            <img class="object-cover w-25 " src="images/banner.png" alt="">
+            <h1 class="text-6xl font-bold ">A barn house of this design has a<span
+                    class="flex flex-col items-center justfy-center">striking appearance</span></h1>
+            <p class=" pt-20">The barn house captivates with its blend of rustic charm and modern
                 sophistication, featuring weathered
                 wood, sleek metal accents, and large windows that flood the space with natural light.</p>
 
@@ -137,9 +143,125 @@
                     class="fa-solid fa-arrow-right -rotate-45 text-black rounded-full bg-green-primary p-2 "></i> </a>
         </div>
 
+        </div>
+
+    </header>
+
+    <!-- Main -->
+    <main class="
+    max-w-screen-xl mx-auto px-16 ig:px-28  ">
+        <div class="">
+            <img src="images/Vector.png" alt="">
+
+            <h1 class="text-xs rounded-lg pt-15 pl-20 pb-10  
+            "><i class="fa-solid fa-arrow-right"></i>
+                About us</h1>
+            <h2 class="text-2xl font-extrabold">We design thoughtful, liveable spaces</h2>
+            <p>The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <div class="flex pt-10">
+                <div class="flex-1 mb-20">
+                    <div class="rounded-lg">
+                        <img src="images/commercial.png" alt="">
+                        <h6>Commercial</h6>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+
+                    <div>
+                        <img src="images/residential.png" alt="">
+                        <h6>Commercial</h6>
+                        <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+                <div class="object-cover w-80 "><img src="images/Rectangle.png" alt=""></div>
+            </div>
+        </div>
+
+        <!-- work process section -->
+        <div>
+            <div class="flex flex-col items-center justfy-center pt-20">
+                <h1 class="text-xs"><i class="fa-solid fa-arrow-right"></i>
+                    How we works</h1>
+                <h1 class="text-2xl font-extrabold">Our Works Process</h1>
+                <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring
+                    weathered
+                    wood, sleek metal accents.</p>
+            </div>
+
+            <div class="flex pt-20">
+                <div class="p-10 rounded-lg bg-pink-primary">
+                    <img class="" src="images/concept.png" alt="">
+                    <h1 class="font-extrabold">Concept</h1>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class="pr-10 pl-10 rounded-lg bg-yellow-primary">
+                    <img src="images/flow-chart.png" alt="">
+                    <h1 class="font-extrabold">Design Process</h1>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+
+                </div>
+                <div class="pr-15 pl-13 rounded-lg bg-paste-primary">
+                    <img src="images/vision.png" alt="">
+                    <h1 class="font-extrabold">Supervision</h1>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class=" rounded-lg bg-blue-primary">
+                    <img src="images/budget-planning.png" alt="">
+                    <h1 class="font-extrabold">Budget Planning</h1>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+            </div>
+
+            <!-- latest Portfolio section -->
+        </div>
+        <div class="flex flex-col items-center justfy-center pt-20 pb-20
+        ">
+            <h1 class="text-xs">
+                <i class="fa-solid fa-arrow-right"></i>
+                Explore our Latest works
+            </h1>
+            <p class="text-3xl">Our Latest Portfolio</p>
+            <p class="text-sm">The barn house captivates with its blend of rustic charm and modern sophistication,
+                featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <div class="">
+            <div class="flex rounded-lg p-4 border-4 w-23">
+
+                <div class="pr-20"> <img src="images/img1.png" alt=""></div>
+
+                <div>
+                    <p class="text-2xl font-extrabold">Commercial</p>
+                    <p>The barn house captivates with its blend of rustic charm and modern. <span
+                            class="flex flex-col items-center justfy-center">The barn house captivates
+                            with its blend of rustic charm and modern.</span></p>
+                    <a class="btn btn-ghost font-black 
+                    text-1xl">
+                        Veiw details <i class="fa-solid fa-arrow-right -rotate-45 rounded-full text-black
+                        bg-green-primary p-2 "></i>
+                    </a>
+
+                </div>
+            </div>
+            <div>
+
+                <!-- <img src="images/img2.png" alt=""> -->
+            </div>
+
+        </div>
 
 
 
+        <!-- <div>
+                <div><img src="images/img3.png" alt=""></div>
+
+                <div><img src="images/img4.png" alt="">
+                    <p>Commercial</p>
+                    <p>
+                        The barn house captivates with its blend of rustic charm and modern. </p>
+                </div>
+
+                <div><img src="images/img5.png" alt=""></div>
+            </div>
 
 
 
@@ -147,41 +269,33 @@
 
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-    </header>
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- Main -->
-    <main class="md:container md:mx-auto"></main>
-
     </main>
+ -->
 
 
-    <!-- Footer -->
-    <footer>
 
-    </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- Footer -->
+        <footer>
+
+        </footer>
 
 
 </body>
