--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                         'yellow-primary': '#EFDA6E',
                         'paste-primary': '#A4DAC3',
                         'blue-primary': '#77AAEA',
+                        'softgreen-primary': '#ABEF5F33',
+
                     }
                 }
             }
@@ -43,9 +45,6 @@
 
     <!-- Font awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
-
-
 
 </head>
 
@@ -147,19 +146,31 @@
 
     </header>
 
-    <!-- Main -->
-    <main class="
-    max-w-screen-xl mx-auto px-16 ig:px-28  ">
-        <div class="">
-            <img src="images/Vector.png" alt="">
 
-            <h1 class="text-xs rounded-lg pt-15 pl-20 pb-10  
-            "><i class="fa-solid fa-arrow-right"></i>
-                About us</h1>
-            <h2 class="text-2xl font-extrabold">We design thoughtful, liveable spaces</h2>
+
+    <!-- We design section -->
+    <main class="
+    max-w-screen-xl mx-auto px-16 ig:px-28 pt-20   ">
+        <div class="bg-pink-primary">
+            <img src="images/Vector.png" alt="">
+            <div class="navbar-end  pl-14">
+                <a class="btn text-black
+                bg-white-primary rounded-full "> <i class="fa-solid fa-arrow-right text-black
+                p-2 "></i>
+                    About us
+                </a>
+            </div>
+
+
+            <h2 class="text-3xl font-extrabold pb-6">We design thoughtful,
+                <span class="flex">liveable spaces</span>
+            </h2>
             <p>The barn house captivates with its blend of rustic charm and
-                modern sophistication, featuring weathered wood, sleek metal accents.</p>
-            <div class="flex pt-10">
+                <span class="flex items-center justfy-center pr-100">modern sophistication, featuring weathered
+                    wood,
+                    sleek metal accents.</span>
+            </p>
+            <div class="flex pt-8 ">
                 <div class="flex-1 mb-20">
                     <div class="rounded-lg">
                         <img src="images/commercial.png" alt="">
@@ -167,21 +178,28 @@
                         <p>The barn house captivates with its blend of rustic charm and modern.</p>
                     </div>
 
-                    <div>
+                    <div class="pt-16">
                         <img src="images/residential.png" alt="">
                         <h6>Commercial</h6>
                         <p>The barn house captivates with its blend of rustic charm and modern.</p>
                     </div>
                 </div>
-                <div class="object-cover w-80 "><img src="images/Rectangle.png" alt=""></div>
+                <div class="object-cover w-80"><img src="images/Rectangle.png" alt=""></div>
             </div>
         </div>
 
         <!-- work process section -->
-        <div>
+        <div class="bg-pink-primary">
             <div class="flex flex-col items-center justfy-center pt-20">
-                <h1 class="text-xs"><i class="fa-solid fa-arrow-right"></i>
-                    How we works</h1>
+                <div class="navbar-end  pl-14 flex flex-col items-center justfy-center ">
+                    <a class="btn text-black
+                        bg-white-primary rounded-full "> <i class="fa-solid fa-arrow-right text-black text-xs
+                        p-2 "></i> How we work </a>
+                </div>
+
+
+
+
                 <h1 class="text-2xl font-extrabold">Our Works Process</h1>
                 <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring
                     weathered
@@ -212,65 +230,11 @@
                 </div>
             </div>
 
-            <!-- latest Portfolio section -->
-        </div>
-        <div class="flex flex-col items-center justfy-center pt-20 pb-20
-        ">
-            <h1 class="text-xs">
-                <i class="fa-solid fa-arrow-right"></i>
-                Explore our Latest works
-            </h1>
-            <p class="text-3xl">Our Latest Portfolio</p>
-            <p class="text-sm">The barn house captivates with its blend of rustic charm and modern sophistication,
-                featuring weathered wood, sleek metal accents.</p>
-        </div>
-        <div class="">
-            <div class="flex rounded-lg p-4 border-4 w-23">
-
-                <div class="pr-20"> <img src="images/img1.png" alt=""></div>
-
-                <div>
-                    <p class="text-2xl font-extrabold">Commercial</p>
-                    <p>The barn house captivates with its blend of rustic charm and modern. <span
-                            class="flex flex-col items-center justfy-center">The barn house captivates
-                            with its blend of rustic charm and modern.</span></p>
-                    <a class="btn btn-ghost font-black 
-                    text-1xl">
-                        Veiw details <i class="fa-solid fa-arrow-right -rotate-45 rounded-full text-black
-                        bg-green-primary p-2 "></i>
-                    </a>
-
-                </div>
-            </div>
-            <div>
-
-                <!-- <img src="images/img2.png" alt=""> -->
-            </div>
 
         </div>
 
 
 
-        <!-- <div>
-                <div><img src="images/img3.png" alt=""></div>
-
-                <div><img src="images/img4.png" alt="">
-                    <p>Commercial</p>
-                    <p>
-                        The barn house captivates with its blend of rustic charm and modern. </p>
-                </div>
-
-                <div><img src="images/img5.png" alt=""></div>
-            </div>
-
-
-
-
-
-        </div>
-
-    </main>
- -->
 
 
 
@@ -292,10 +256,13 @@
 
 
 
-        <!-- Footer -->
-        <footer>
 
-        </footer>
+
+
+
+
+
+
 
 
 </body>
